STR homepage: hero, sections, CTAs, SEO
- Hero: headline for short-term rental managers, subhead supplies per property + owner billing; CTAs Book a demo, See how owner billing works
- Sections: How it works (3 steps), Turnover ops, Owner billing, Multi-property, Why not spreadsheets?, Use cases, Who it's for
- Pricing/footer: properties/supplies language; nav How it works, Owner billing
- SEO: title/meta short-term rental inventory & owner billing, vacation rental supplies, owner reimbursement
- LANDING_COPY.md: 3 hero options, full copy, nav/CTA/meta, checklist

--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Stock Stay | Inventory Management – stockstay.com</title>
-    <meta name="description" content="Stock Stay is the inventory management platform at stockstay.com. Track stock, manage warehouses, create invoices, and collaborate with your team. Start free at stockstay.com." />
+    <title>Stock Stay | Short-Term Rental Inventory & Owner Billing</title>
+    <meta name="description" content="Short-term rental inventory management for property managers. Track supplies per property, automate owner reimbursement and pass-through billing. Reduce waste and disputes." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="canonical" href="https://stockstay.com/" />
     <!-- Open Graph / social -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://stockstay.com/" />
-    <meta property="og:title" content="Stock Stay | Inventory Management – stockstay.com" />
-    <meta property="og:description" content="Stock Stay is the inventory management platform at stockstay.com. Track stock, manage warehouses, create invoices, and collaborate with your team. Start free at stockstay.com." />
+    <meta property="og:title" content="Stock Stay | Short-Term Rental Inventory & Owner Billing" />
+    <meta property="og:description" content="Short-term rental inventory management for property managers. Track supplies per property, automate owner reimbursement and pass-through billing. Reduce waste and disputes." />
     <meta property="og:site_name" content="Stock Stay" />
     <meta property="og:locale" content="en_US" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Stock Stay | Inventory Management – stockstay.com" />
-    <meta name="twitter:description" content="Stock Stay is the inventory management platform at stockstay.com. Track stock, manage warehouses, create invoices. Start free at stockstay.com." />
+    <meta name="twitter:title" content="Stock Stay | Short-Term Rental Inventory & Owner Billing" />
+    <meta name="twitter:description" content="Short-term rental inventory management for property managers. Track supplies per property, automate owner reimbursement and pass-through billing." />
     <!-- Structured data for search -->
     <script type="application/ld+json">
     {
@@ -24,7 +24,7 @@
       "@type": "WebSite",
       "name": "Stock Stay",
       "url": "https://stockstay.com",
-      "description": "Inventory management platform. Track stock, manage warehouses, create invoices, collaborate with your team.",
+      "description": "Short-term rental inventory management and vacation rental supplies tracking. Track supplies per property, owner reimbursement and pass-through billing for STR managers.",
       "publisher": {
         "@type": "Organization",
         "name": "Stock Stay",
