Use relative favicon path for better compatibility across deployments

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/logo.png" type="image/png" />
-    <link rel="apple-touch-icon" href="/logo.png" />
+    <link rel="icon" type="image/png" href="./logo.png" />
+    <link rel="shortcut icon" type="image/png" href="./logo.png" />
+    <link rel="apple-touch-icon" href="./logo.png" />
     <title>Stock Stay | Short-Term Rental Inventory & Owner Billing</title>
     <meta name="description" content="Short-term rental inventory management for property managers. Track supplies per property, automate owner reimbursement and pass-through billing. Reduce waste and disputes." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
